<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_ai"
        android:icon="@drawable/ic_ai"
        android:title="@string/nav_ai" />

    <item
        android:id="@+id/navigation_learning"
        android:icon="@drawable/ic_learning"
        android:title="@string/nav_learning" />

    <item
        android:id="@+id/navigation_task_scheduler"
        android:icon="@drawable/ic_tasks"
        android:title="@string/nav_task_scheduler" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>