<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.aiassistant.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/aiFragment"
        android:name="com.aiassistant.fragments.AIFragment"
        android:label="@string/ai"
        tools:layout="@layout/fragment_ai" />

    <fragment
        android:id="@+id/learningFragment"
        android:name="com.aiassistant.fragments.LearningFragment"
        android:label="@string/learning"
        tools:layout="@layout/fragment_learning" />

    <fragment
        android:id="@+id/taskSchedulerFragment"
        android:name="com.aiassistant.fragments.TaskSchedulerFragment"
        android:label="@string/task_scheduler"
        tools:layout="@layout/fragment_task_scheduler" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.aiassistant.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>